# hdrscreensaver

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  install_screensaver.bat  test_caching_feature.bat  test_command_line_flag_preload.bat  test_disabled_preview.bat  test_help.bat  test_mouse_movement.bat  test_preload_flag.bat  test_random_order.bat  test_screensaver_exit.bat  test_subfolder_feature.bat
.github/workflows/: build.yml
include/: DirectX10BitBackend.h  GainMapProcessor.h  GdiPlusImageLoader.h  IImageBackend.h  ImageCache.h  ImageFileUtils.h  LoadedImageTypes.h  Logger.h  SettingsDialog.h  SkiaImageLoader.h  TestPattern.h  WebView2Mode.h
installer/: HDRScreenSaver.iss  create_installer.bat
resources/: HDRScreenSaver.rc  jpegdump.txt
src/: DirectX10BitBackend.cpp  GainMapProcessor.cpp  GdiPlusImageLoader.cpp  ImageCache.cpp  LauncherScr.cpp  LoadedImageTypes.cpp  SettingsDialog.cpp  SettingsDialogTemplate.rc  SkiaImageLoader.cpp  TestPattern.cpp  WebView2Mode.cpp  main.cpp
